--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"build:wasm": "tsx scripts/build-wasm.ts",
+		"debug:wat": "tsx scripts/debug-wat.ts",
 		"build": "tsc -b && vite build",
 		"preview": "vite preview",
 		"lint": "biome lint --write",
 		"format": "biome format --write",
-		"test": "vitest",
-		"debug:wat": "tsx scripts/debug-wat.ts"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.10",
