--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
-	"include": ["src", "scripts"]
+	"include": ["core", "scripts", "test", "runtime", "wasm", "app", "vite.config.ts"],
 }
