--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"preview": "vite preview",
 		"lint": "biome lint --write",
 		"format": "biome format --write",
-		"test": "vitest"
+		"test": "vitest",
+		"generate-rom-list": "tsx scripts/generate-rom-list.ts"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.10",
+		"clsx": "^2.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwindcss": "^4.1.10"
