--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"clsx": "^2.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"tailwindcss": "^4.1.10"
+		"tailwindcss": "^4.1.10",
+		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
