--- a/src/roms-manifest.json
+++ b/src/roms-manifest.json
@@ -1,11 +1,33 @@
 {
   "tests": [
-    "1-chip8-logo.ch8",
-    "2-ibm-logo.ch8",
-    "3-corax+.ch8",
-    "4-flags.ch8",
-    "5-quirks.ch8",
-    "6-keypad.ch8",
-    "7-beep.ch8"
-  ]
+    {
+      "name": " Chip8 Logo",
+      "path": "roms/tests/1-chip8-logo.ch8"
+    },
+    {
+      "name": " Ibm Logo",
+      "path": "roms/tests/2-ibm-logo.ch8"
+    },
+    {
+      "name": " Corax+",
+      "path": "roms/tests/3-corax+.ch8"
+    },
+    {
+      "name": " Flags",
+      "path": "roms/tests/4-flags.ch8"
+    },
+    {
+      "name": " Quirks",
+      "path": "roms/tests/5-quirks.ch8"
+    },
+    {
+      "name": " Keypad",
+      "path": "roms/tests/6-keypad.ch8"
+    },
+    {
+      "name": " Beep",
+      "path": "roms/tests/7-beep.ch8"
+    }
+  ],
+  "roms": []
 }
